--- a/assets/include/css/main.css
+++ b/assets/include/css/main.css
@@ -77,6 +77,7 @@ body ,ol ,ul ,li ,a ,img ,h1 ,h2 ,h3 ,h4 ,h5 ,i ,b ,dd ,tt ,input ,textarea {
     width:100%;
     background-color:black;
     position: relative;
+
 }
 #banner_mobile img{
     width:100%;
@@ -139,8 +140,8 @@ body ,ol ,ul ,li ,a ,img ,h1 ,h2 ,h3 ,h4 ,h5 ,i ,b ,dd ,tt ,input ,textarea {
     opacity:0;
 }
 #banner2 .subject{
-     width:30%;
-     left:55%;
+    width:30%;
+    left:55%;
 }
 .subject img{
     width:100%;
@@ -171,11 +172,11 @@ body ,ol ,ul ,li ,a ,img ,h1 ,h2 ,h3 ,h4 ,h5 ,i ,b ,dd ,tt ,input ,textarea {
 }
 
 select {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;
-   text-align:center;
-   color:gray;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    text-align:center;
+    color:gray;
 }
 .sequence_text{
     display:inline;
@@ -596,10 +597,23 @@ select {
 #vote2 .vote_search{
     text-align:center;
 }
-
 #banner2{
     text-align:center;
     overflow: visible;
+    position: relative;
+}
+.b2_title{
+    position: absolute;
+    bottom:120px;
+    text-align:center;
+    width:100%;
+    color:white;
+}
+.b2_title1{
+    font-size:5em;
+}
+.b2_title2{
+    font-size:3em;
 }
 #banner2 img{
     width:100%;
